# dotchat

./: .gitignore  Doxyfile.mk  README.md  build.sh  protocol.md
client/: CMakeLists.txt  conanfile.txt  main.cpp
client/inc/: cli.hpp
client/src/cli/: channel_related.cpp  login_related.cpp  user_related.cpp  wait_loop.cpp
server/: CMakeLists.txt  conanfile.txt  db.dotchat.sqlite  main.cpp
server/inc/: handle.hpp  thread_connection.hpp
server/inc/db/: database.hpp  db.hpp  db_error.hpp  db_prepare.hpp  db_row.hpp  types.hpp
server/inc/handlers/: handlers.hpp  helpers.hpp
server/inc/threading/: thread_mgr.hpp
server/src/: data.cpp  handle.cpp  thread_connection.cpp
server/src/db/: db.cpp  db_error.cpp  dbinit.sql  sqlite_error.macro
server/src/handlers/: change_pass.cpp  channel_details.cpp  channel_messages.cpp  channels.cpp  invite_user.cpp  login.cpp  logout.cpp  new_channel.cpp  new_user.cpp  send_message.cpp  user_details.cpp
server/src/threading/: thread_connection.cpp  thread_mgr.cpp
shared/inc/: dynsize_array.hpp  either.hpp  hexgrid.hpp  logger.hpp  tls_client_socket.hpp  tls_connection.hpp  tls_context.hpp
shared/inc/protocol/: helpers.hpp  message.hpp  message_error.hpp  requests.hpp
shared/inc/tls/: tls_bytestream.hpp  tls_client_socket.hpp  tls_connection.hpp  tls_context.hpp  tls_error.hpp  tls_server_socket.hpp
shared/src/: logger.cpp  tls_client_socket.cpp  tls_connection.cpp  tls_context.cpp  tls_server_socket.cpp
shared/src/protocol/: message.cpp  message_intl.cpp  requests.cpp  responses.cpp
shared/src/tls/: tls_client_socket.cpp  tls_connection.cpp  tls_context.cpp  tls_server_socket.cpp
